added orthotropic rheology and demo to verify the forward/reverse rheologies are self-consistent

--- a/src/Makefile
+++ b/src/Makefile
@@ -72,6 +72,9 @@ clean:
 	
 clear:
 	rm -f $(DEMOPATH)/demo_LATROT $(DEMOPATH)/demo_DDRX $(SPECFAB).o $(SPECFAB).mod *.so
+
+orthotest: $(SPECFAB).o
+	$(COMPILER) $(DEMOPATH)/test_orthotropic_rheology.f90 $(ALLOBJS) $(OPTS) $(OPTSNETCDF) -o $(DEMOPATH)/test_orthotropic_rheology
 	
 #-------------------
 # Elmer, JOSEF, ...
