--- a/src/Makefile
+++ b/src/Makefile
@@ -73,8 +73,9 @@ clean:
 clear:
 	rm -f $(DEMOPATH)/demo_LATROT $(DEMOPATH)/demo_DDRX $(SPECFAB).o $(SPECFAB).mod *.so
 
-orthotest: $(SPECFAB).o
-	$(COMPILER) $(DEMOPATH)/test_orthotropic_rheology.f90 $(ALLOBJS) $(OPTS) $(OPTSNETCDF) -o $(DEMOPATH)/test_orthotropic_rheology
+rheologytests: $(SPECFAB).o
+	$(COMPILER) $(DEMOPATH)/test_orthotropic_rheology.f90   $(ALLOBJS) $(OPTS) $(OPTSNETCDF) -o $(DEMOPATH)/test_orthotropic_rheology
+	$(COMPILER) $(DEMOPATH)/test_tranisotropic_rheology.f90 $(ALLOBJS) $(OPTS) $(OPTSNETCDF) -o $(DEMOPATH)/test_tranisotropic_rheology
 	
 #-------------------
 # Elmer, JOSEF, ...
