--- a/src/Makefile
+++ b/src/Makefile
@@ -1,27 +1,41 @@
 # N. M. Rathmann <rathmann@nbi.ku.dk> and D. A. Lilien <dlilien90@gmail.com>, 2019-2021
 
 #-------------------
-# Core
+# Compiler
 #-------------------
 
 #COMPILER=ifort -free -xHost -shared-intel -align all  -debug all -qopt-report-phase=vec -diag-disable 8291 -diag-disable 8290  
-COMPILER=gfortran -ffree-line-length-none -m64 -Wall -fPIC
-OPTS=-O2 -mcmodel=medium -lm -llapack -lblas -lfftw3
+COMPILER=gfortran -ffree-line-length-none -m64 -Wall -fPIC -Wno-integer-division -Wno-unused-dummy-argument
+OPTS=-O2 -mcmodel=medium -lm -llapack -lblas -lfftw3 
 OPTSNETCDF=-lnetcdff -I/usr/include -L/usr/lib 
+
+#-------------------
+# Core modules
+#-------------------
+
+PATHDEMO=../demo
+PATHFABEVO=$(PATHDEMO)/fabric-evolution
+PATHRHEOTEST=$(PATHDEMO)/rheology-test
 
 SPECFAB=specfab
 MOMENTS=moments
 GAUNT=gaunt
 TENPROD=tensorproducts
 RHEOLOGIES=rheologies
+LAMBDASOLVER=lambdasolver
 
-PATHDEMO=../demo
-PATHFABEVO=$(PATHDEMO)/fabric-evolution
-PATHRHEOTEST=$(PATHDEMO)/rheology-test
+OBJCORE=$(SPECFAB).o $(TENPROD).o $(MOMENTS).o $(GAUNT).o $(RHEOLOGIES).o $(LAMBDASOLVER).o
+MODCORE=$(OBJCORE:.o=.mod)
+SRCCORE=$(OBJCORE:.o=.f90)
 
-ALLOBJS=$(SPECFAB).o $(TENPROD).o $(MOMENTS).o $(GAUNT).o $(RHEOLOGIES).o
-ALLMODS=$(ALLOBJS:.o=.mod)
-ALLSRCS=$(ALLOBJS:.o=.f90)
+#-------------------
+# Math77 library
+#-------------------
+
+PATHM77=include/math77
+#dckder.o
+OBJM77=$(PATHM77)/amach.o $(PATHM77)/derv1.o $(PATHM77)/dnqsol.o $(PATHM77)/dnrm2.o $(PATHM77)/erfin.o $(PATHM77)/ermsg.o $(PATHM77)/ierm1.o $(PATHM77)/ierv1.o
+SRCM77=$(OBJM77:.o=.f)
 
 #-------------------
 # Elmer, JOSEF, ...
@@ -30,16 +44,24 @@ ALLSRCS=$(ALLOBJS:.o=.f90)
 ELMERSRCS=$(wildcard $(PATHDEMO)/elmer/elmer*.f90)
 ELMERS=$(ELMERSRCS:.f90=)
 
+#-------------------
+# Collect all
+#-------------------
+
+OBJALL=$(OBJCORE) $(OBJM77)
+MODALL=$(MODCORE)
+SRCALL=$(SRCCORE) $(SRCM77)
+
 ########################################
 
 #-------------------
-# Core
+# Make rules
 #-------------------
 
 fabric-evolution-demo: $(SPECFAB).o
-	$(COMPILER) $(PATHFABEVO)/run-fabric-evolution-latrot.f90 $(ALLOBJS) $(OPTS) $(OPTSNETCDF) -o $(PATHFABEVO)/run-fabric-evolution-latrot 
-	$(COMPILER) $(PATHFABEVO)/run-fabric-evolution-ddrx.f90   $(ALLOBJS) $(OPTS) $(OPTSNETCDF) -o $(PATHFABEVO)/run-fabric-evolution-ddrx
-	mkdir -p $(PATHFABEVO)/solutions
+	$(COMPILER) $(PATHFABEVO)/run-fabric-evolution-latrot.f90 $(OBJALL) $(OPTS) $(OPTSNETCDF) -o $(PATHFABEVO)/run-fabric-evolution-latrot 
+	$(COMPILER) $(PATHFABEVO)/run-fabric-evolution-ddrx.f90   $(OBJALL) $(OPTS) $(OPTSNETCDF) -o $(PATHFABEVO)/run-fabric-evolution-ddrx
+	@mkdir -p $(PATHFABEVO)/solutions
 	@echo "\n*** To get going, try the demos:"
 	@echo "\n--- Lattice rotation ---"
 	@echo "cd $(PATHFABEVO); ./run-fabric-evolution-latrot  uc_zz :: uniaxial compression (uc) in the vertical (z)"
@@ -49,20 +71,24 @@ fabric-evolution-demo: $(SPECFAB).o
 	@echo "cd $(PATHFABEVO); ./run-fabric-evolution-ddrx ss_xz :: simple shear (ss) along the x-z plane"
 
 specfabpy: $(SPECFAB).o
-	f2py -lm -llapack -lblas -lfftw3 -I. $(ALLOBJS) -c -m specfabpy specfabpy.f90 --f90flags="-ffree-line-length-none -mcmodel=medium" --quiet 
-	cp specfabpy.cpython* $(PATHDEMO)/
-	@echo "\n*** Python module installed in demo path."
-	mkdir -p $(PATHFABEVO)/solutions
+	f2py -lm -llapack -lblas -lfftw3 -I. $(OBJALL) -c -m specfabpy specfabpy.f90 --f90flags="-ffree-line-length-none -mcmodel=medium" --quiet 
+	@cp specfabpy.cpython* $(PATHDEMO)/
+	@echo "\n*** Python module (specfabpy.cpython) installed in demo path."
+	@mkdir -p $(PATHFABEVO)/solutions
 	@echo "\n*** To get going, try the demo:"
 	@echo "cd $(PATHFABEVO); python3 run-fabric-evolution-latrot.py uc_zz ::: for uniaxial compression (uc) in the vertical (z)"
 	@echo "cd $(PATHFABEVO); python3 run-fabric-evolution-latrot.py ss_xz ::: for simple shear (ss) along the x-z plane"
 
-lib$(SPECFAB).so: $(ALLSRCS) $(ALLOBJS)
-	$(COMPILER) $(OPTS) -shared $(ALLSRCS) -o $@
+rheology-test: $(SPECFAB).o
+	$(COMPILER) $(PATHRHEOTEST)/rheology-test-orthotropic.f90           $(OBJALL) $(OPTS) $(OPTSNETCDF) -o $(PATHRHEOTEST)/rheology-test-orthotropic
+	$(COMPILER) $(PATHRHEOTEST)/rheology-test-transverselyisotropic.f90 $(OBJALL) $(OPTS) $(OPTSNETCDF) -o $(PATHRHEOTEST)/rheology-test-transverselyisotropic
 
-$(SPECFAB).o: $(MOMENTS).o $(GAUNT).o
+lib$(SPECFAB).so: $(SRCALL) $(OBJALL)
+	$(COMPILER) $(OPTS) -shared $(SRCALL) -o $@
+
+$(SPECFAB).o: $(MOMENTS).o $(GAUNT).o $(LAMBDASOLVER).o
 	$(COMPILER) $(OPTS) -c $(TENPROD).f90 
-	$(COMPILER) $(OPTS) -c $(RHEOLOGIES).f90
+	$(COMPILER) $(OPTS) -c $(RHEOLOGIES).f90 
 	$(COMPILER) $(OPTS) -c $(SPECFAB).f90
 
 $(MOMENTS).o: 
@@ -72,23 +98,28 @@ $(MOMENTS).o:
 $(GAUNT).o: 
 	$(COMPILER) $(OPTS) -c $(GAUNT).f90
 
-clean:
-	rm -f $(PATHFABEVO)/run-fabric-evolution-latrot $(PATHFABEVO)/run-fabric-evolution-ddrx *.o *.mod *.so
-	
-clear:
-	rm -f $(PATHFABEVO)/run-fabric-evolution-latrot $(PATHFABEVO)/run-fabric-evolution-ddrx $(SPECFAB).o $(SPECFAB).mod *.so
+$(LAMBDASOLVER).o:
+	rm -f $(OBJM77) $(LAMBDASOLVER).o $(LAMBDASOLVER).mod $(PATHM77)/test
+	cd $(PATHM77) && $(COMPILER) $(OPTS) -c *.f
+	$(COMPILER) $(OPTS) -c $(LAMBDASOLVER).f90
+	$(COMPILER) $(OPTS) $(PATHM77)/test.f90 $(LAMBDASOLVER).o $(OBJM77) -o $(PATHM77)/test
 
-rheology-test: $(SPECFAB).o
-	$(COMPILER) $(PATHRHEOTEST)/rheology-test-orthotropic.f90           $(ALLOBJS) $(OPTS) $(OPTSNETCDF) -o $(PATHRHEOTEST)/rheology-test-orthotropic
-	$(COMPILER) $(PATHRHEOTEST)/rheology-test-transverselyisotropic.f90 $(ALLOBJS) $(OPTS) $(OPTSNETCDF) -o $(PATHRHEOTEST)/rheology-test-transverselyisotropic
-	
+clear:
+	rm -f $(PATHRHEOTEST)/rheology-test-orthotropic $(PATHRHEOTEST)/rheology-test-transverselyisotropic
+	rm -f $(PATHFABEVO)/run-fabric-evolution-latrot $(PATHFABEVO)/run-fabric-evolution-ddrx 
+	rm -f $(SPECFAB).o $(SPECFAB).mod *.so
+	rm -f $(LAMBDASOLVER).o $(LAMBDASOLVER).mod $(OBJM77) $(PATHM77)/test
+
+clean: clear
+	rm -f *.o *.mod *.so
+
 #-------------------
 # Elmer, JOSEF, ...
 #-------------------
 
 #elmer: $(ELMERS)
 
-#$(DEMO)/elmer%: $(DEMO)/elmer%.f90 | lib$(SPECFAB).so $(ALLMODS)
+#$(DEMO)/elmer%: $(DEMO)/elmer%.f90 | lib$(SPECFAB).so $(MODCORE)
 #	$(COMPILER) $< $(ALLOBJS) $(OPTS) $(OPTSNETCDF) -o $@
 
 
