added 'reduced form' module (and test script) that takes advantages of the fact that negative 'm' components are given in terms of positive m components by virtue of the ODF being real (useful for numerical ice-flow modelling as this effectively cuts the degrees of freedom in half for any L). Update a^2 calculation to be consistent with GRL radar paper (does not affect numerical values, but a bit nicer code).

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,9 +23,10 @@ MOMENTS=moments
 GAUNT=gaunt
 TENPROD=tensorproducts
 RHEOLOGIES=rheologies
+REDUCED=reducedform
 LAMBDASOLVER=lambdasolver
 
-OBJCORE=$(SPECFAB).o $(TENPROD).o $(MOMENTS).o $(GAUNT).o $(RHEOLOGIES).o $(LAMBDASOLVER).o
+OBJCORE=$(SPECFAB).o $(TENPROD).o $(MOMENTS).o $(GAUNT).o $(RHEOLOGIES).o $(REDUCED).o $(LAMBDASOLVER).o
 MODCORE=$(OBJCORE:.o=.mod)
 SRCCORE=$(OBJCORE:.o=.f90)
 
@@ -95,6 +96,7 @@ lib$(SPECFAB).so: $(SRCALL) $(OBJALL)
 $(SPECFAB).o: $(MOMENTS).o $(GAUNT).o $(LAMBDASOLVER).o
 	$(COMPILER) $(OPTS) -c $(TENPROD).f90 
 	$(COMPILER) $(OPTS) -c $(RHEOLOGIES).f90 
+	$(COMPILER) $(OPTS) -c $(REDUCED).f90
 	$(COMPILER) $(OPTS) -c $(SPECFAB).f90
 
 $(MOMENTS).o: 
