Fix dependencies in Makefile so that libspecfab compiles independently

--- a/src/Makefile
+++ b/src/Makefile
@@ -29,8 +29,9 @@ RHEOLOGIES=rheologies
 REDUCED=reducedform
 LAMBDASOLVER=lambdasolver
 
-OBJCORE=$(SPECFAB).o $(TENPROD).o $(HOMOGEN).o $(ENHFAC).o $(MANDEL).o $(MOMENTS).o $(GAUNT).o $(DYNAMICS).o $(RHEOLOGIES).o $(REDUCED).o $(LAMBDASOLVER).o
-MODCORE=$(OBJCORE:.o=.mod)
+DEPLESS=$(TENPROD).o $(MANDEL).o $(REDUCED).o $(GAUNT).o
+WITHDEPS=$(RHEOLOGIES).o $(MOMENTS).o $(LAMBDASOLVER).o $(DYNAMICS).o $(HOMOGEN).o $(ENHFAC).o 
+OBJCORE=$(DEPLESS) $(WITHDEPS)
 SRCCORE=$(OBJCORE:.o=.f90)
 
 #-------------------
@@ -52,9 +53,8 @@ ELMERS=$(ELMERSRCS:.f90=)
 # Collect all
 #-------------------
 
-OBJALL=$(OBJCORE) $(OBJM77)
-MODALL=$(MODCORE)
-SRCALL=$(SRCCORE) $(SRCM77)
+OBJALL=$(SPECFAB).o $(OBJCORE) $(OBJM77)
+SRCALL=$(SPECFAB).f90 $(SRCCORE) $(SRCM77)
 
 #-------------------
 # specfabpy Python versions
@@ -105,22 +105,27 @@ aux-tests: $(SPECFAB).o
 lib$(SPECFAB).so: $(SRCALL) $(OBJALL)
 	$(COMPILER) $(OPTS) -shared $(SRCALL) -o $@
 
-$(SPECFAB).o: $(MOMENTS).o $(GAUNT).o $(LAMBDASOLVER).o
-	$(COMPILER) $(OPTS) -c $(TENPROD).f90 
-	$(COMPILER) $(OPTS) -c $(RHEOLOGIES).f90 
-	$(COMPILER) $(OPTS) -c $(HOMOGEN).f90
-	$(COMPILER) $(OPTS) -c $(ENHFAC).f90
-	$(COMPILER) $(OPTS) -c $(DYNAMICS).f90
-	$(COMPILER) $(OPTS) -c $(REDUCED).f90
+$(SPECFAB).o: $(OBJCORE)
 	$(COMPILER) $(OPTS) -c $(SPECFAB).f90
 
-$(MOMENTS).o: 
-	@echo "*** Compiling structure tensor expressions and gaunt coefficients... this may take some time but is required only once ***"
-	$(COMPILER) $(OPTS) -c $(MANDEL).f90 
-	$(COMPILER) $(OPTS) -c $(MOMENTS).f90
+$(DEPLESS): %.o: %.f90
+	$(COMPILER) $(OPTS) -c $<
 
-$(GAUNT).o: 
-	$(COMPILER) $(OPTS) -c $(GAUNT).f90
+$(RHEOLOGIES).o: $(RHEOLOGIES).f90 $(TENPROD).o $(LAMBDASOLVER).o
+	$(COMPILER) $(OPTS) -c $<
+
+$(DYNAMICS).o: $(DYNAMICS).f90 $(TENPROD).o $(MOMENTS).o $(GAUNT).o
+	$(COMPILER) $(OPTS) -c $<
+
+$(HOMOGEN).o: $(HOMOGEN).f90 $(MOMENTS).o $(RHEOLOGIES).o
+	$(COMPILER) $(OPTS) -c $<
+
+$(ENHFAC).o: $(ENHFAC).f90 $(MOMENTS).o $(TENPROD).o $(HOMOGEN).o
+	$(COMPILER) $(OPTS) -c $<
+
+$(MOMENTS).o: $(MOMENTS).f90 $(MANDEL).o
+	@echo "*** Compiling structure tensor expressions... this may take some time but is required only once ***"
+	$(COMPILER) $(OPTS) -c $(MOMENTS).f90
 
 $(LAMBDASOLVER).o:
 	rm -f $(OBJM77) $(LAMBDASOLVER).o $(LAMBDASOLVER).mod $(PATHM77)/test
@@ -136,6 +141,8 @@ clear:
 
 clean: clear
 	rm -f *.o *.mod *.so
+
+all: $(SPECFAB).o lib$(SPECFAB).so
 
 #-------------------
 # Elmer, JOSEF, ...
