updated n'=1 enhancement-factor calculation to use only independent components (=>much faster calculation). Added initial files for elastic velocity calculation (in development). Added L=20 (hyper diffusion) regularization.

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,10 +26,11 @@ ENHFAC=enhancementfactors
 MANDEL=mandel
 DYNAMICS=dynamics
 RHEOLOGIES=rheologies
+WAVEPROP=wavepropagation
 REDUCED=reducedform
 LAMBDASOLVER=lambdasolver
 
-OBJCORE=$(SPECFAB).o $(TENPROD).o $(HOMOGEN).o $(ENHFAC).o $(MANDEL).o $(MOMENTS).o $(GAUNT).o $(DYNAMICS).o $(RHEOLOGIES).o $(REDUCED).o $(LAMBDASOLVER).o
+OBJCORE=$(SPECFAB).o $(TENPROD).o $(HOMOGEN).o $(ENHFAC).o $(MANDEL).o $(MOMENTS).o $(GAUNT).o $(DYNAMICS).o $(RHEOLOGIES).o $(WAVEPROP).o $(REDUCED).o $(LAMBDASOLVER).o
 MODCORE=$(OBJCORE:.o=.mod)
 SRCCORE=$(OBJCORE:.o=.f90)
 
@@ -108,6 +109,7 @@ lib$(SPECFAB).so: $(SRCALL) $(OBJALL)
 $(SPECFAB).o: $(MOMENTS).o $(GAUNT).o $(LAMBDASOLVER).o
 	$(COMPILER) $(OPTS) -c $(TENPROD).f90 
 	$(COMPILER) $(OPTS) -c $(RHEOLOGIES).f90 
+	$(COMPILER) $(OPTS) -c $(WAVEPROP).f90 
 	$(COMPILER) $(OPTS) -c $(HOMOGEN).f90
 	$(COMPILER) $(OPTS) -c $(ENHFAC).f90
 	$(COMPILER) $(OPTS) -c $(DYNAMICS).f90
