--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,11 +3,13 @@ site_name: specfab documentation
 nav:
     - About: index.md
     - Loading specfab: initialize.md
-    - 'CPO':
+    - 'CPO representation':
         - Representation: cpo-representation.md
-        - Dynamics: cpo-dynamics.md
         - Rotation: cpo-rotation.md
         - Plotting: cpo-plot.md
+    - 'CPO dynamics':
+        - Transversely isotropic grains: cpo-dynamics-tranisotropic.md
+        - Orthotropic grains: cpo-dynamics-orthotropic.md
     - 'Constitutive equations':
         - Viscoplastic: constitutive-viscoplastic.md
         - Elastic: constitutive-elastic.md
