--- a/src/Makefile
+++ b/src/Makefile
@@ -32,10 +32,11 @@ ELASTICITIES=elasticities
 WAVEPROP=wavepropagation
 ROTATION=rotation
 REDUCED=reducedform
+DEFORMMODES=deformationmodes
 LAMBDASOLVER=lambdasolver
 
 DEPLESS=$(TENPROD).o $(MANDEL).o $(REDUCED).o $(GAUNT).o
-WITHDEPS=$(RHEOLOGIES).o $(ELASTICITIES).o $(MOMENTS).o $(LAMBDASOLVER).o $(DYNAMICS).o $(HOMOGEN).o $(ENHFAC).o $(ROTATION).o $(WAVEPROP).o
+WITHDEPS=$(RHEOLOGIES).o $(ELASTICITIES).o $(MOMENTS).o $(LAMBDASOLVER).o $(DYNAMICS).o $(HOMOGEN).o $(ENHFAC).o $(ROTATION).o $(WAVEPROP).o $(DEFORMMODES).o
 # 
 OBJCORE=$(DEPLESS) $(WITHDEPS)
 SRCCORE=$(OBJCORE:.o=.f90)
@@ -145,6 +146,9 @@ $(WAVEPROP).o: $(WAVEPROP).f90 $(MOMENTS).o $(MANDEL).o $(TENPROD).o $(ELASTICIT
 	$(COMPILER) $(OPTS) -c $<
 
 $(ROTATION).o: $(ROTATION).f90 $(MOMENTS).o 
+	$(COMPILER) $(OPTS) -c $<
+
+$(DEFORMMODES).o: $(DEFORMMODES).f90 $(TENPROD).o 
 	$(COMPILER) $(OPTS) -c $<
 
 $(LAMBDASOLVER).o:
