--- a/src/Makefile
+++ b/src/Makefile
@@ -33,10 +33,11 @@ WAVEPROP=wavepropagation
 ROTATION=rotation
 REDUCED=reducedform
 DEFORMMODES=deformationmodes
+IDEALSTATE=idealstate
 LAMBDASOLVER=lambdasolver
 
 DEPLESS=$(TENPROD).o $(MANDEL).o $(REDUCED).o $(GAUNT).o
-WITHDEPS=$(RHEOLOGIES).o $(ELASTICITIES).o $(MOMENTS).o $(LAMBDASOLVER).o $(DYNAMICS).o $(HOMOGEN).o $(ENHFAC).o $(ROTATION).o $(WAVEPROP).o $(DEFORMMODES).o
+WITHDEPS=$(RHEOLOGIES).o $(ELASTICITIES).o $(MOMENTS).o $(LAMBDASOLVER).o $(DYNAMICS).o $(HOMOGEN).o $(ENHFAC).o $(ROTATION).o $(WAVEPROP).o $(DEFORMMODES).o $(IDEALSTATE).o
 # 
 OBJCORE=$(DEPLESS) $(WITHDEPS)
 SRCCORE=$(OBJCORE:.o=.f90)
@@ -149,6 +150,9 @@ $(ROTATION).o: $(ROTATION).f90 $(MOMENTS).o
 	$(COMPILER) $(OPTS) -c $<
 
 $(DEFORMMODES).o: $(DEFORMMODES).f90 $(TENPROD).o 
+	$(COMPILER) $(OPTS) -c $<
+
+$(IDEALSTATE).o: $(IDEALSTATE).f90 $(MOMENTS).o $(ROTATION).o
 	$(COMPILER) $(OPTS) -c $<
 
 $(LAMBDASOLVER).o:
