updates fortran code to use header files for common constants. cleaned up in dome codes a bit and created common routines. updates docs. preparing for new pipy release.

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,6 +20,7 @@ PATHFABEVO=$(PATHDEMO)/fabric-evolution
 PATHRHEOTEST=$(PATHTEST)/constitutive-equations
 
 SPECFAB=specfab
+HEADER=header
 MOMENTS=moments
 GAUNT=gaunt
 TENPROD=tensorproducts
@@ -36,7 +37,7 @@ DEFORMMODES=deformationmodes
 IDEALSTATE=idealstate
 LAMBDASOLVER=lambdasolver
 
-DEPLESS=$(TENPROD).o $(MANDEL).o $(REDUCED).o $(GAUNT).o
+DEPLESS=$(HEADER).o $(TENPROD).o $(MANDEL).o $(REDUCED).o $(GAUNT).o
 WITHDEPS=$(RHEOLOGIES).o $(ELASTICITIES).o $(MOMENTS).o $(LAMBDASOLVER).o $(DYNAMICS).o $(HOMOGEN).o $(ENHFAC).o $(ROTATION).o $(WAVEPROP).o $(DEFORMMODES).o $(IDEALSTATE).o
 # 
 OBJCORE=$(DEPLESS) $(WITHDEPS)
@@ -116,6 +117,8 @@ aux-tests: $(SPECFAB).o
 	$(COMPILER) $(PATHTEST)/reduced-coef-test/reduced-coef-test.f90 $(OBJALL) $(OPTS) $(OPTSNETCDF) -o $(PATHTEST)/reduced-coef-test/reduced-coef-test
 	$(COMPILER) $(PATHTEST)/wigner-d-rotation-test/discrete-rotation-test.f90 $(OBJALL) $(OPTS) $(OPTSNETCDF) -o $(PATHTEST)/wigner-d-rotation-test/discrete-rotation-test
 
+#-------------------
+
 lib$(SPECFAB).so: $(SRCALL) $(OBJALL)
 	$(COMPILER) $(OPTS) -shared $(SRCALL) -o $@
 
@@ -125,34 +128,34 @@ $(SPECFAB).o: $(SPECFAB).f90 $(OBJCORE) elmer/specfab_elmer.f90 josef/specfab_jo
 $(DEPLESS): %.o: %.f90
 	$(COMPILER) $(OPTS) -c $<
 
-$(RHEOLOGIES).o: $(RHEOLOGIES).f90 $(TENPROD).o $(LAMBDASOLVER).o
+$(RHEOLOGIES).o: $(RHEOLOGIES).f90 $(HEADER).o $(TENPROD).o $(LAMBDASOLVER).o
 	$(COMPILER) $(OPTS) -c $<
 
-$(ELASTICITIES).o: $(ELASTICITIES).f90 $(TENPROD).o
+$(ELASTICITIES).o: $(ELASTICITIES).f90 $(HEADER).o $(TENPROD).o
 	$(COMPILER) $(OPTS) -c $<
 
-$(DYNAMICS).o: $(DYNAMICS).f90 tensorialdynamics.f90 $(TENPROD).o $(MOMENTS).o $(GAUNT).o
+$(DYNAMICS).o: $(DYNAMICS).f90 $(HEADER).o tensorialdynamics.f90 $(TENPROD).o $(MOMENTS).o $(GAUNT).o
 	$(COMPILER) $(OPTS) -c $<
 
-$(HOMOGEN).o: $(HOMOGEN).f90 $(MOMENTS).o $(RHEOLOGIES).o $(ELASTICITIES).o
+$(HOMOGEN).o: $(HOMOGEN).f90 $(HEADER).o $(MOMENTS).o $(RHEOLOGIES).o $(ELASTICITIES).o
 	$(COMPILER) $(OPTS) -c $<
 
-$(ENHFAC).o: $(ENHFAC).f90 $(MOMENTS).o $(TENPROD).o $(HOMOGEN).o
+$(ENHFAC).o: $(ENHFAC).f90 $(HEADER).o $(MOMENTS).o $(TENPROD).o $(HOMOGEN).o
 	$(COMPILER) $(OPTS) -c $<
 
-$(MOMENTS).o: $(MOMENTS).f90 $(MANDEL).o
+$(MOMENTS).o: $(MOMENTS).f90 $(HEADER).o $(MANDEL).o
 	$(COMPILER) $(OPTS) -c $(MOMENTS).f90
 
-$(WAVEPROP).o: $(WAVEPROP).f90 $(MOMENTS).o $(MANDEL).o $(TENPROD).o $(ELASTICITIES).o $(HOMOGEN).o
+$(WAVEPROP).o: $(WAVEPROP).f90 $(HEADER).o $(MOMENTS).o $(MANDEL).o $(TENPROD).o $(ELASTICITIES).o $(HOMOGEN).o
 	$(COMPILER) $(OPTS) -c $<
 
-$(ROTATION).o: $(ROTATION).f90 $(MOMENTS).o 
+$(ROTATION).o: $(ROTATION).f90 $(HEADER).o $(MOMENTS).o 
 	$(COMPILER) $(OPTS) -c $<
 
-$(DEFORMMODES).o: $(DEFORMMODES).f90 $(TENPROD).o 
+$(DEFORMMODES).o: $(DEFORMMODES).f90 $(HEADER).o $(TENPROD).o 
 	$(COMPILER) $(OPTS) -c $<
 
-$(IDEALSTATE).o: $(IDEALSTATE).f90 $(MOMENTS).o $(ROTATION).o
+$(IDEALSTATE).o: $(IDEALSTATE).f90 $(HEADER).o $(ROTATION).o
 	$(COMPILER) $(OPTS) -c $<
 
 $(LAMBDASOLVER).o:
@@ -160,6 +163,8 @@ $(LAMBDASOLVER).o:
 	cd $(PATHM77) && $(COMPILER) $(OPTS) -c *.f
 	$(COMPILER) $(OPTS) -c $(LAMBDASOLVER).f90
 	$(COMPILER) $(OPTS) $(PATHM77)/test.f90 $(LAMBDASOLVER).o $(OBJM77) -o $(PATHM77)/test
+
+#-------------------
 
 clear:
 	rm -f $(PATHRHEOTEST)/rheology-test-orthotropic $(PATHRHEOTEST)/rheology-test-transverselyisotropic
